--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -8,6 +8,8 @@
 /*!
 \page changelog Changelog
 
+- 1.81.0
+    - Require C++11 or higher
 - 1.80.0
     - Deprecated support for C++03 and earlier, C++11 will be required in the next release
     - Provide `-sICU_LINK_LOCALE` as a temporary replacement for `-sICU_LINK` which is incompatible with Boost.Regex.
@@ -19,7 +21,7 @@
     - Fix build failures due to missing includes
     - Handle or suppress many warnings which makes the build log cleaner
 - 1.67.0
-    - Added support of unique_ptr interface in addition to C++2003 auto_ptr - in order to support C++2017, now you can use BOOST_LOCALE_HIDE_AUTO_PTR definiton to remove auto_ptr from the interfaces and prevent deprecated watnings
+    - Added support of unique_ptr interface in addition to C++2003 auto_ptr - in order to support C++2017, now you can use BOOST_LOCALE_HIDE_AUTO_PTR definition to remove auto_ptr from the interfaces and prevent deprecated watnings
     - Fixed test problem with ICU >60.1
     - Fix of solaris build
     - Fixed wired FreeBSD/clang issue on optimized build. Probably compiler workaround
