--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -10,6 +10,13 @@
 
 - 1.81.0
     - Require C++11 or higher
+    - Modernize code (C++11 features instead of Boost replacements, consistent formatting)
+    - Error on use of `-sICU_LINK_LOCALE` and `-sICU_LINK`, use `-sICU_*_NAME` when `-sICU_PATH` is not enough
+    - Fix build on macOS with iconv
+    - Fix int-overflow on negative roll of years in `date_time`
+    - Assume and use UTF-16 encoding for Windows `wchar_t-codecvt`
+    - Fix rounding issues with calendar time
+    - Make `basic_format` movable allowing it to be returned from functions
 - 1.80.0
     - Deprecated support for C++03 and earlier, C++11 will be required in the next release
     - Provide `-sICU_LINK_LOCALE` as a temporary replacement for `-sICU_LINK` which is incompatible with Boost.Regex.
