--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -17,6 +17,7 @@
     - Assume and use UTF-16 encoding for Windows `wchar_t-codecvt`
     - Fix rounding issues with calendar time
     - Make `basic_format` movable allowing it to be returned from functions
+    - Fix conversion of e.g. codepage iso-2022-jp on Windows
 - 1.80.0
     - Deprecated support for C++03 and earlier, C++11 will be required in the next release
     - Provide `-sICU_LINK_LOCALE` as a temporary replacement for `-sICU_LINK` which is incompatible with Boost.Regex.
