--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -22,6 +22,7 @@
         - Make `basic_format` movable allowing it to be returned from functions
     	- Fix conversion of e.g. codepage iso-2022-jp on Windows
     	- Add more Windows codepages, e.g. cp1025, and various ISO and IBM codepages
+        - Performance improvements
 - 1.80.0
     - Deprecated support for C++03 and earlier, C++11 will be required in the next release
     - Provide `-sICU_LINK_LOCALE` as a temporary replacement for `-sICU_LINK` which is incompatible with Boost.Regex.
