Add to changelog

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -12,6 +12,7 @@
     - Breaking changes
         - `get_system_locale` and dependents will now correctly favor `$LC_ALL` over `LC_CTYPE` as defined by POSIX
     - Other improvements and fixes
+        - Add `boost::locale::util::locale_data` to parse a locale
         - `boost::locale::info::encoding()` result is in uppercase as documented, e.g. "UTF-8" instead of "utf-8"
 - 1.81.0
     - Breaking changes
