--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -8,12 +8,14 @@
 /*!
 \page changelog Changelog
 
-- Unreleased
+- 1.82.0
     - Breaking changes
         - `get_system_locale` and dependents will now correctly favor `$LC_ALL` over `LC_CTYPE` as defined by POSIX
     - Other improvements and fixes
         - Add `boost::locale::util::locale_data` to parse a locale
         - `boost::locale::info::encoding()` result is in uppercase as documented, e.g. "UTF-8" instead of "utf-8"
+        - Support M49 country codes such as `en_001` or `en_150`
+        - Treat `en_US_POSIX` as an alias for the `C` locale
 - 1.81.0
     - Breaking changes
         - Require C++11 or higher
