--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -8,6 +8,9 @@
 /*!
 \page changelog Changelog
 
+- Unreleased
+    - Fix UB on invalid index in format strings
+
 - 1.82.0
     - Breaking changes
         - `get_system_locale` and dependents will now correctly favor `$LC_ALL` over `LC_CTYPE` as defined by POSIX
