Fix conversion to some codepages like iso-2022-jp using `WideCharToMultiByte`
Although not (any more?) officially documented at least this codepage doesn't support substitutions.
Hence check the error and rerun it with fixed parameters.
See #121

Also replace `remove_substitutions` by erase-remove and magic numbers by `CP_UTF7/8` constants

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -13,6 +13,7 @@
         - Bitwise/binary operators (left/right shift, binary and/or/xor/not) are no longer supported in message catalog files matching GNU gettext behavior
     - Other improvements and fixes
         - Fix UB on invalid index in format strings
+        - Fix conversion of UTF to e.g. iso-2022-jp on Windows without ICU
         - Use `long long` as the count parameter for pluralized translations
         - Make `localization_backend_manager` movable
         - Add missing `noexcept` to move assignments/constructors
