Introduce converter classes as alternative to `to_utf`/`from_utf`/`between`
May save some overhead creating implementation classes and allows to
write shorter code for doing the same conversions repeatatly.
Also allows a hook for testing each backend individually.

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -12,6 +12,7 @@
     - Breaking changes
         - Bitwise/binary operators (left/right shift, binary and/or/xor/not) are no longer supported in message catalog files matching GNU gettext behavior
     - Other improvements and fixes
+        - Introduce converter classes as alternative to `to_utf`/`from_utf`/`between`
         - Fix UB on invalid index in format strings
         - Fix conversion of UTF to e.g. iso-2022-jp on Windows without ICU
         - Use `long long` as the count parameter for pluralized translations
