--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -11,6 +11,9 @@
 - 1.85.0
     - Breaking changes
         - `collator` does no longer derive from `std::collator` avoiding possible type confusion
+        - `date_time` stores time in second resolution for the ICU backend, where sub-second resolution was added/fixed in Boost 1.81
+        - `comparator` in case of errors now throws on construction instead of on use as documented
+        - Character encoding conversion using IConv throws a `std::runtime_error` when the used IConv library is detected to be faulty (instead of running into an infinite loop)
 - 1.84.0
     - Breaking changes
         - `to_title` for the WinAPI backend returns the string unchanged instead of an empty string
