Fix parsing of numbers in floating point format to integers
When parsing a string like "123.456" to an integer the ICU backend would
first parse it greedily to a floating point value and then cast/truncate
it to an integer.
Set the flag to only parse integers when parsing to an integral number.
Care must be taken not to set that when parsing e.g. a currency or date
to an integer where the truncation is intended.

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -8,6 +8,8 @@
 /*!
 \page changelog Changelog
 
+- 1.88.0
+    - Fix parsing of numbers in floating point format to integers
 - 1.86.0
     - Make ICU implementation of `to_title` threadsafe
     - Add allocator support to `utf_to_utf`
